Wednesday, August 28th, James Turner

	* Fix a bug (found by Simon) in Connection::gotData, introduced
	  by switching the lifetime of the underlying tcp_socket_stream. Basically
	  we weren't checking if the _stream existing prior to calling isReady.
	  If the meta-server is being used, and a connection object is created but
	  not connected, then this bug (a segfault occurs), since the Connection
	  is registered with the Poll instance and network activity can happen.
	  
	* Change the meta-server code to use the same life-time rationale for
	  it's UDP stream that BaseConnection uses for the Atlas stream. Basically
	  create the stream on refresh() and not before. This changes the default
	  behaviour : creating a Meta instance will not trigger a list query. This allows
	  the client to attach to the relevant signals before any failures can
	  occurr (thanks Simon)
	  
	* Fixed game server list persistance (I hope). If a failure or cancel
	  occurs while refreshing the list, Eris will revert back to the last
	  'good' list it recieved (if one exists).
	  
	* Converted dispatcher clean up in Lobby dtor to use removeIfDispatcher instead
	  of lame try { .. } catch {}  blocks.
	  
	* Added an explicit greater-than comparisom to Timestamp, so the tests compile.
	  Did GCC 2.9.x implicitly use !(a > b) before? Certainly 3.1 seems not too.

Thursday, August 8th, Al Riddoch

	* Fixed sigc++ use so it complies with published APIs, and put
	  conditionals in to pick up headers for sigc++ 1.0 or 1.2.

Saturday, August 3rd, James Turner

	* Change BaseConnection to create a new tcp_socket_stream
	  for every connect. (And, obviously, hardDisconnect deletes it)
	  This should fix handling of stream errors, since there is no
	  safe way to clear the error code apparently.
	  This change is low impact code-wise (only changes in
	  BaseConnection.cpp), but needs good testing.

Friday, August 2, Michael Koch

	* Patch to declare operators in header file and made method